@@ -8,12 +8,13 @@ class CDVDInputStreamFile : public CDVDInputStream
 public:
   CDVDInputStreamFile();
   virtual ~CDVDInputStreamFile();
-  virtual bool Open(const char* strFile);
+  virtual bool Open(const char* strFile, const std::string &content);
   virtual void Close();
   virtual int Read(BYTE* buf, int buf_size);
   virtual __int64 Seek(__int64 offset, int whence);
   virtual bool IsEOF();
-
+  virtual __int64 GetLength();
+  
 protected:
   CFile* m_pFile;
 };
